k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-project
  labels:
    app.kubernetes.io/name: production-ready-devops-project
    app.kubernetes.io/managed-by: kustomize
